--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -30,9 +30,9 @@ body {
 }
 .alert {
   border-radius: 0;
-  font-size: 0.85em;
+  font-size: 1.1em;
   line-height: 18px;
-  padding: 5px 10px;
+  padding: 10px 15px;
 }
 .thumbnail {
   border-radius: 0;
@@ -48,11 +48,15 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10102;
+  z-index: 10103;
 }
 .modal {
-  z-index: 10103;
+  z-index: 10104;
   font-size: 14px;
+}
+.input-code {
+  font-size: 28px;
+  resize: none;
 }
 .tag.edit .modal-dialog {
   margin-top: 100px;
@@ -158,7 +162,7 @@ nav {
   position: fixed;
   top: 0;
   width: 80px;
-  z-index: 10101;
+  z-index: 10102;
 }
 .tag-header {
   background-color: darken(#fcf8e3, 5%);
@@ -171,7 +175,7 @@ nav {
   right: 0;
   text-align: center;
   top: 52px;
-  z-index: 10100;
+  z-index: 10101;
   &::before {
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
