--- a/src/assets/scss/tag.scss
+++ b/src/assets/scss/tag.scss
@@ -6,7 +6,9 @@
 }
 
 .page-container {
-  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   background-attachment: fixed !important;
 }
 
